@@ -1,3 +1,7 @@
+2001-08-01  H.J. Lu <hjl@gnu.org>
+
+	* gcc/config/mips/linux.h (ASM_OUTPUT_SOURCE_LINE): Defined.
+
 2001-07-31  Jeff Sturm  <jsturm@one-point.com>
 
         * except.c (duplicate_eh_regions): Test n_array[i] for NULL.
